fix2 select z-index

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -860,3 +860,7 @@ ul {
 .select2-drop-mask {
   z-index: 19999;
 }
+
+.select2-drop {
+  z-index: 21000;
+}
